# Image-Processing

./: .gitignore  README.md  README_INTENSITY_TRANSFORMATIONS.md  compile_latex.sh  create_conda_env.sh  denoising_demo.ipynb  interactive_denoising.py  logical_graph  main.py  setup.py  temp_settings.json  test_kimia216.py  test_ml.py  test_ml_simple.py  wiener_filter_example.sh
config/: README.md  pyproject.toml
docs/: README.md  README_HISTOGRAM_EQUALIZATION.md  adaptive_median_filter.md  damage_modeling_README.md  image_registration_README.md  wiener_filter_optimal_k.md
docs/convolution/: README.md
docs/damage_modeling/: README.md
examples/: application.py  fourier_demo.py
image_processing_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
imgproc_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
latex_documentation/: README.md  compile_latex.sh  damage_modeling.tex  histogram_equalization.tex  histogram_matching.tex  image_processing_documentation.tex  image_processing_documentation_en.aux  image_processing_documentation_en.out  image_processing_documentation_en.tex  image_processing_documentation_en.toc  intensity_transformations.tex  main.tex
scripts/: README.md  create_module_readmes.py  organize_output.py  reorganize_project.py  run_ml.sh  standardize_headers.py  update_test_headers.py
src/: __init__.py  cli.py  cli.py.bak  core.py  test_image_registration.py  test_manual_registration.py  test_simple_manual_registration.py
src/utils/: __init__.py  (+1 more)
tests/: README.md  __init__.py  test_adaptive_median.py  test_denoising.py  test_paths.py
(+110 files in other folders)
