[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imgproc-tools"
version = "0.1.0"
description = "A collection of image processing tools"
readme = "README.md"
authors = [
    {name = "Oussama GUELFAA", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dependencies = [
    "numpy>=1.19.0",
    "matplotlib>=3.3.0",
    "scikit-image>=0.17.0",
]

[project.scripts]
imgproc = "src.cli:main"

[tool.setuptools]
packages = ["src"]
